Fixed page jump to anchor, added style to buttons, and added a button to jump to the top of the page

--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -2,6 +2,10 @@
   margin: 5rem 25%;
 }
 
+.aboutMe__subtitle {
+  text-align: initial;
+}
+
 .aboutMe__text {
   font-size: 1.1rem;
   line-height: 1.6rem;
