--- a/styles/header.css
+++ b/styles/header.css
@@ -1,18 +1,21 @@
 header {
-  background-color: var(--color-background-secondary);
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border-bottom: 1px solid var(--color-gray);
+  background-color: rgba(28, 28, 28, 0.8);
+  backdrop-filter: blur(11px);
+  border-radius: 50px;
+  border-bottom: 2px solid var(--color-gray-light);
   position: sticky;
   top: 0;
   z-index: 1;
+  height: 7rem;
 }
 
 .myName__container {
   display: inline-block;
   text-decoration: none;
-  color: inherit;
+  color: var(--color-main);
 }
 
 .myName {
@@ -32,7 +35,7 @@ header {
 }
 
 .navbar__link {
-  color: var(--color-blue-light);
+  color: var(--color-main);
   font-weight: 700;
   text-decoration: none;
   display: block;
@@ -43,8 +46,8 @@ header {
 }
 
 .navbar__link:hover {
-  border-left: 2px solid var(--color-blue-light);
-  border-right: 2px solid var(--color-blue-light);
+  border-left: 2px solid var(--color-main);
+  border-right: 2px solid var(--color-main);
 }
 
 @keyframes title-cursor {
